--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,22 +1,22 @@
 port: 8080
 api_key: "your-api-key-here"
 
-aliases:
+groups:
   - name: "gpt-4-turbo"
     models:
-      - priority: 1
+      - weight: 1
         provider: "openai"
         name: "gpt-4-turbo-preview"
-      - priority: 2
+      - weight: 2
         provider: "openai"
         name: "gpt-4"
   
   - name: "fast-model"
     models:
-      - priority: 1
+      - weight: 1
         provider: "openai"
         name: "gpt-3.5-turbo"
-      - priority: 2
+      - weight: 2
         provider: "openrouter"
         name: "openai/gpt-3.5-turbo"
 
